--- a/TennisLabJPA/build.gradle
+++ b/TennisLabJPA/build.gradle
@@ -42,6 +42,16 @@ noArg {
 }
 
 dependencies {
+    //Base de datos H2
+    implementation("com.h2database:h2:2.1.214")
+
+    //Logging
+    implementation('io.github.microutils:kotlin-logging-jvm:3.0.3')
+    implementation('ch.qos.logback:logback-classic:1.4.4')
+
+    //Serializar JSON
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1")
+
     implementation('org.hibernate:hibernate-core:5.6.1.Final')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
