--- a/TennisLabJPA/build.gradle
+++ b/TennisLabJPA/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.6.20'
     id 'org.jetbrains.kotlin.plugin.allopen' version '1.6.20'
     id 'org.jetbrains.kotlin.plugin.noarg' version '1.6.20'
+    id'org.jetbrains.kotlin.plugin.serialization' version '1.6.20'
+
 }
 
 group 'com.example'
