--- a/TennisLabJPA/build.gradle
+++ b/TennisLabJPA/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    implementation("com.google.guava:guava:31.1-jre")
+
 }
 
 test {
